created clean to last name

--- a/newportfoil/base/global/partials/section-form.html
+++ b/newportfoil/base/global/partials/section-form.html
@@ -7,6 +7,7 @@
         <li>
             <label for="{{field.id_for_label}}">{{field.label}}</label>
             {{field}}
+            {{field.errors}}
         </li>
         {% endfor %}
     <div>
