modified to views

--- a/newportfoil/base/global/partials/section-form.html
+++ b/newportfoil/base/global/partials/section-form.html
@@ -1,5 +1,5 @@
 {% load static %}
-<form class="box-input" method="POST"  >
+<form action="\" class="box-input" method="POST"   >
     {% csrf_token %}
     <h2>Deixe uma mensagem</h2>
     <ul >
