HTML modification in about

--- a/newportfoil/base/global/partials/sect.html
+++ b/newportfoil/base/global/partials/sect.html
@@ -29,11 +29,16 @@
             </div>
             <div class="about-box">
                 <p class="about">
-                    Olá, pessoal! Sou o Erick, acadêmico no curso Técnico em Análise e Desenvolvimento de Sistemas. Desculpa aí pela enrolação, mas só tomei vergonha na cara e entrei de cabeça na área de tecnologia há cerca de um ano. Desde então, tô nessa jornada maluca de aprender e desbravar esse mundão digital.</p>
+                    Olá, pessoal! Sou o Erick Dutra, acadêmico no curso Técnico em Análise e Desenvolvimento de Sistemas.
+                </p>
                 <br>
                 <p class="about"> 
-                    Tô sempre na pegada de me aprimorar, tentando tirar o melhor de mim nos estudos. E não é só bit e byte, não! Também curto uma academia e uns mergulhos, porque, né, a gente não vive só de código. Misturar uns exercícios físicos nessa receita de estudo é o segredo da felicidade, pelo menos é o que eu acho.
-                </p>   
+                    Tenho grande paixão por desenvolvimento de software e por automação de tarefas, também tenho bastante interesse na área de IA com ênfase em machine learning.
+                </p>
+                <br>
+                <p class="about"> 
+                    Tento me desenvolver dia a dia, de pouco a pouco, acredito que com paciência, perseverança e disciplina, conseguiremos atingir todas as nossas metas.
+                </p> 
             </div>
         </div>
     </div>
